Fix horizontal scrolling and code-based relayouting
Commit current lively version

WIP: relayouting of page contents

--- a/index.css
+++ b/index.css
@@ -3,3 +3,7 @@
 /* `@imports` fetching remote CSS are okay. */
 
 a { text-decoration: none; }
+
+.website {
+  overflow-x: hidden !important; // hide horizontal 
+}
